syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SecurityLoginService{
	rpc GetSecurityLogin(SecLoginIdRequest) returns(SecurityLogin);
	rpc CreateSecurityLogin(SecurityLogins) returns(google.protobuf.Empty);
	rpc UpdateApplcantEducation(SecurityLogins) returns(google.protobuf.Empty);
	rpc DeleteApplcantEducation(SecurityLogins) returns(google.protobuf.Empty);
}

message SecLoginIdRequest{
		string Id = 1;
		}

message SecurityLogin{
		string Id = 1;
        string Login = 2;
        string Password = 3;
        google.protobuf.Timestamp Created = 4;
        google.protobuf.Timestamp  PasswordUpdate = 5;
        google.protobuf.Timestamp  AgreementAccepted = 6;
        bool IsLocked = 7;
        bool IsInactive = 8;
        string EmailAddress = 9;
        string PhoneNumber = 10;
        string FullName = 11;
        bool ForceChangePassword = 12;
		string PrefferredLanguage = 13;
}

message SecurityLogins{
	repeated SecurityLogin  SecLogin = 1;
}
